--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -1,123 +1,65 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="dark">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="administrador de canciones,ver y escuchar canciones"
-    />
-    <meta
-      name="author"
-      content="Recalde Leonardo Emanuel,Gonzalez Axel Sebastian,Pereyra Franco,Vargas Ismael"
-    />
-    <meta
-      name="keywords"
-      content="mejores canciones,cuarteto,cumbia,pop,rock"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    <meta name="description" content="administrador de canciones, ver y escuchar canciones" />
+    <meta name="author" content="Autores" />
+    <meta name="keywords" content="mejores canciones, cuarteto, cumbia, pop, rock" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
     <title>STREAMING DE MUSICA</title>
-  </head>
-  <body>
+</head>
+<body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"
-          ><i class="bi bi-youtube text-danger me-2"></i>YOUMUSIC</a
-        >
-        <div>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Qué queres escuchar?"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-danger" type="submit">Buscar</button>
-          </form>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html"><i class="bi bi-youtube text-danger me-2"></i>YOUMUSIC</a>
+            <div>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Qué queres escuchar?" aria-label="Search" />
+                    <button class="btn btn-outline-danger" type="submit">Buscar</button>
+                </form>
+            </div>
         </div>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <strong class="navbar-toggler-icon"></strong>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
-                ><i class="bi bi-house text-danger"></i
-              ></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/administrador.html">Premium</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Ingresá
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Inicia Sesión</a></li>
-                <li><a class="dropdown-item" href="#">Registrarse</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <i class="bi bi-gear-fill text-danger nav-link"></i>
-            </li>
-            <li class="nav-item">
-              <i class="bi bi-person-circle text-danger nav-link"></i>
-            </li>
-          </ul>
-        </div>
-      </div>
     </nav>
     <main class="container">
-      <h1 class="text-center my-3">Detalles de la Cancion</h1>
-      <h3 class="mb-5">Categoria: </h3>
-      <section class="text-center contenedorPadre">
-        <div class="row padreInfo">
-          <div class="col logoCancion"><img src="../img/ab67616d0000b273c3780b28120b1bc2869a2ca7.jpg" alt="logo">
-            <a target="_blank" href="#" class="row"><i class="bi bi-play-fill fs-1"></i></a>
-          </div>
-          <div class="col text-start infoCancion align-content-center shadow border rounded-3 fs-5">
-            <p><strong>Codigo:</strong></p>
-            <p><strong>Titulo:</strong></p>
-            <p><strong>Artista:</strong></p>
-            <p><strong>Duracion:</strong></p>
-            <p><strong>Cancion:</strong></p>
-          </div>
-        </div>
-      </section>
+        <h1 class="text-center my-3">Detalles de la Canción</h1>
+        <h3 class="mb-5">Categoría: <span id="categoriaCancion"></span></h3>
+        <section class="text-center contenedorPadre">
+            <div class="row padreInfo">
+                <div class="col logoCancion">
+                    <img id="imagenCancion" src="" alt="Imagen de la canción" class="img-fluid rounded">
+                    <a target="_blank" href="#" id="linkReproduccion" class="row">
+                        <i class="bi bi-play-fill fs-1"></i>
+                    </a>
+                </div>
+                <div class="col text-start infoCancion align-content-center shadow border rounded-3 fs-5" id="infoCancion">
+                    <p><strong>Código:</strong> <span id="codigoCancion"></span></p>
+                    <p><strong>Título:</strong> <span id="tituloCancion"></span></p>
+                    <p><strong>Artista:</strong> <span id="artistaCancion"></span></p>
+                    <p><strong>Duración:</strong> <span id="duracionCancion"></span></p>
+                    <p><strong>Canción:</strong> </p>
+                    <audio controls id="audioCancion">
+                        <source id="audioSource" src="" type="audio/mpeg">
+                        Tu navegador no soporta la reproducción de audio.
+                    </audio>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="bg-body-tertiary">
-      <section class="container-fluid py-2">
-        <p class="text-center">©Todos los derechos reservados</p>
-      </section>
+        <section class="container-fluid py-2">
+            <p class="text-center">©Todos los derechos reservados</p>
+        </section>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <!-- Carga el script JS externo -->
+    <script src="../JS/detalleCancion.js"></script>
+</body>
 </html>
