listo conxiones pag principal con pagina detalle

--- a/index.html
+++ b/index.html
@@ -234,13 +234,10 @@
 
       <div class="container mt-5">
         <h1 class="mb-4">Canciones Para Ti:</h1>
-        <div id="Galeria" class="row">
+        <div id="gallery" class="row">
           <!-- Las tarjetas se insertarán aquí por JavaScript -->
         </div>
-        <div id="detalleCancion" class="container mt-5" style="display: none">
-          <!-- Los detalles de la canción se insertarán aquí dinámicamente -->
-          <!-- Las imágenes y títulos se insertarán aquí por JavaScript -->
-        </div>
+      
       </div>
     </main>
     <footer class="bg-body-tertiary">
@@ -345,6 +342,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./JS/login.js"></script>
-    <script src="/JS/conexionPrincipal.js"></script>
+    <script src="/JS/detalleCancion.js"></script>
   </body>
 </html>
