--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -25,37 +25,28 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link
-      href="
-      https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.min.css"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="../css/administrador.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>STREAMING DE MUSICA</title>
   </head>
-  <body id="bgpaginaAdministrador" >
+  <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"
+          <a class="navbar-brand" href="./index.html"
             ><i class="bi bi-youtube text-danger me-2"></i>YOUMUSIC</a
           >
           <div class="d-none d-md-block">
             <form class="d-flex" role="search" id="formularioBuscar">
-              <div class="mt-2">
-                <input
+              <input
                 class="form-control me-2"
                 type="search"
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
+                id="inputBuscar"
               />
-              </div>
-              <div class="mt-2 ms-3">
-                <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
-                  Buscar
-                </button>
-              </div>
+              <button class="btn btn-outline-danger" type="submit">
+                Buscar
+              </button>
             </form>
           </div>
           <button
@@ -80,7 +71,9 @@
                   >Administrador</a
                 >
               </li>
+
               <li class="nav-item dropdown" id="loginDropdown">
+
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -103,20 +96,13 @@
                   <li><a class="dropdown-item" href="./pages/error404.html">Registrarse</a></li>
                 </ul>
               </li>
-
-              <li class="nav-item" id="logoutItem" style="display: none">
-                <button id="logoutButton" class="btn btn-outline-danger">
-                  Cerrar Sesión
-                </button>
               </li>
-
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  aria-current="page"
-                  href="../pages/nosotros.html"
-                  >Nosotros</i
-                ></a>
+                  href="/pages/nosotros.html"
+                  >Nosotros</a
+                >
               </li>
               <li class="nav-item">
                 <a
@@ -132,10 +118,14 @@
               <li class="nav-item">
                 <i class="bi bi-person-circle text-danger nav-link"></i>
               </li>
+              <li class="nav-item" id="logoutItem" style="display: none">
+                <button id="logoutButton" class="btn btn-outline-danger">
+                  Cerrar Sesión
+                </button>
             </ul>
           </div>
           <div class="d-block d-md-none mt-2">
-            <form class="d-flex" role="search" id="formularioBuscar">
+            <form class="d-flex" role="search"id="formularioBuscar">
               <input
                 class="form-control me-2"
                 type="search"
@@ -150,52 +140,54 @@
         </div>
       </nav>
     </header>
-
     <main class="container py-5">
-      <h1 class="text-center text-success fw-light">
-        Administra Tus Canciones
-      </h1>
-      <hr />
-      <div class="table-responsive mt-5">
-        <table
-          class="table table-hover table-bordered border-light text-center"
-        >
-          <thead class="table-primary">
-            <tr>
-              <th>ID</th>
-              <th>GRUPO</th>
-              <th>CATEGORIA</th>
-              <th>TITULO</th>
-              <th>CANCION</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
+    
 
-      <section class="text-end my-5">
-        <button class="btn btn-outline-success" id="btnCanciones">
-          <b>AGREGAR CANCION</b>
-        </button>
-      </section>
+        
+        <div class="container mt-4">
+            <div class="card">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img id="detail-image" class="card-img" alt="Imagen">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 id="detail-title" class="card-title"></h5>
+                            <p id="detail-group" class="card-text"></p>
+                            <p id="detail-genre" class="card-text"></p>
+                            <p id="detail-duration" class="card-text"></p>
+                            <a id="detail-song" class="btn btn-primary" href="#">Escuchar Canción</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="../index.html" class="btn btn-primary mt-4">Volver a la Galería</a>
+        </div>
 
-      <hr />
+
+
+
     </main>
+    <footer class="bg-body-tertiary">
+      <section class="container-fluid">
+        <p class="text-center">©Todos los derechos reservados</p>
+      </section>
+    </footer>
+    <!-- Modal -->
 
     <div
       class="modal fade"
-      id="ModalAdminCanciones"
+      id="modalLogin"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
       tabindex="-1"
-      aria-labelledby="ModalAdminCancionesLabel"
+      aria-labelledby="staticBackdropLabel"
       aria-hidden="true"
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header bg-black bg-gradient text-white">
-            <h2 class="modal-title fs-5" id="ModalAdminCancionesLabel">
-              Agregue/Modifique Sus Canciones
-            </h2>
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Login</h1>
             <button
               type="button"
               class="btn-close"
@@ -204,89 +196,65 @@
             ></button>
           </div>
           <div class="modal-body">
-            <form id="formularioCanciones">
+            <form class="w-50 ms-3" id="ingresarFormulario">
               <div class="mb-3">
-                <label for="Grupo" class="form-label">Grupo/Artista*</label>
-                <input
-                  type="text"
-                  class="form-control border border-3 border-info-subtle"
-                  id="Grupo"
-                  placeholder="Las Pastillas del Abuelo"
-                  required
-                />
-                <div class="invalid-feedback">Escribe el nombre completo, debe contener mas de 3 carácteres</div>
-              </div>
-              <div class="mb-3">
-                <label for="Categoria" class="form-label">Género*</label>
-                <input
-                  type="text"
-                  class="form-control border border-3 border-info-subtle"
-                  id="Categoria"
-                  placeholder="Rock"
-                  required
-                />
-                <div class="invalid-feedback">Escribe un género completo, debe contener mas de 3 carácteres </div>
-              </div>
-              <div class="mb-3">
-                <label for="Titulo" class="form-label">Titulo*</label>
-                <input
-                  type="text"
-                  class="form-control border border-3 border-info-subtle"
-                  id="Titulo"
-                  placeholder="¿Que es Dios?"
-                  required
-                />
-                <div class="invalid-feedback">Escribe el nombre completo, debe contener mas de 3 carácteres</div>
-              </div>
-              <div class="mb-3">
-                <label for="Imagen" class="form-label">Imagen( Url )*</label>
-                <input
-                  type="text"
-                  class="form-control border border-3 border-info-subtle"
-                  id="Imagen"
-                  minlength="6"
-                  maxlength="100"
-                  placeholder="Url"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="Duracion" class="form-label">Duracion*</label>
-                <input
-                  type="text"
-                  class="form-control border border-3 border-info-subtle"
-                  id="Duracion"
-                  minlength="1"
-                  maxlength="100"
-                  placeholder="3:40"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="Cancion" class="form-label"
-                  >Cancion( Url ) (MP3)*</label
+                <label for="loginEmail" class="form-label"
+                  >Correo Electrónico</label
                 >
                 <input
-                  type="url"
-                  class="form-control border border-3 border-info-subtle"
-                  id="Cancion"
-                  minlength="6"
-                  maxlength="100"
-                  placeholder="url MP3"
+                  type="email"
+                  class="form-control"
+                  id="loginEmail"
                   required
                 />
               </div>
+              <div class="mb-3">
+                <label for="loginPassword" class="form-label">Contraseña</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="loginPassword"
+                  required
+                />
+              </div>
+              <a href="/pages/error404.html"
+                ><button
+                  type="button"
+                  class="btn btn-light w-100 mb-2"
+                  style="border: 1px solid rgba(0, 0, 0, 0.125)"
+                >
+                  <img
+                    src="./img/google-icon.svg"
+                    alt="Google Icon"
+                    class="tamañoLogoGyF me-2"
+                  />
+                  Iniciar con Google
+                </button></a
+              >
+              <a href="/pages/error404.html"
+                ><button type="button" class="btn btn-primary w-100 mb-2">
+                  <img
+                    src="./img/facebook-icon.svg"
+                    alt="facebook-icon"
+                    class="tamañoLogoGyF me-2"
+                  />
+                  Iniciar con Facebook
+                </button></a
+              >
 
-              <div class="modal-footer mt-3">
-                <div class="text-end">
-                  <button
-                    class="btn btn-outline-success"
-                    type="submit"
-                    id="btnFormulario"
-                  >
-                    Agregar
-                  </button>
-                </div>
+              <a href="/pages/error404.html" class="d-block text-center"
+                >¿Olvidaste tu contraseña?</a
+              >
+
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancelar
+                </button>
+                <button type="submit" class="btn btn-success">Iniciar</button>
               </div>
             </form>
           </div>
@@ -294,19 +262,14 @@
       </div>
     </div>
 
-    <footer class="bg-body-tertiary ">
-      <section class="container-fluid">
-        <p class="text-center">©Todos los derechos reservados</p>
-      </section>
-    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="
-    https://cdn.jsdelivr.net/npm/sweetalert2@11.12.4/dist/sweetalert2.all.min.js"></script>
-    <script src="../JS/admin.js" type="module"></script>
+    <script src="./JS/login.js"></script>
     <script src="../JS/detalleCancion.js"></script>
   </body>
 </html>
