validaciones corregido al actualizar ventana

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 id="inputBuscar"
               />
               <button class="btn btn-outline-danger" type="submit">
-                Buscar
+                recargue Pagina
               </button>
             </form>
           </div>
@@ -234,8 +234,8 @@
 
       <div class="container mt-5">
         <h1 class="mb-4">Canciones Para Ti:</h1>
-        <div id="gallery" class="row">
-          <!-- Las tarjetas se insertarán aquí por JavaScript -->
+        <div id="carddefotos" class="row">
+     
         </div>
       
       </div>
