--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -25,14 +25,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link rel="stylesheet" href="../css/detalle.css">
     <link rel="stylesheet" href="../css/style.css" />
     <title>STREAMING DE MUSICA</title>
   </head>
-  <body>
+  <body id="bgpaginaAdministrador">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"
+          <a class="navbar-brand" href="../index.html"
             ><i class="bi bi-youtube text-danger me-2"></i>YOUMUSIC</a
           >
           <div class="d-none d-md-block">
@@ -108,7 +109,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="./index.html"
+                  href="../index.html"
                   ><i class="bi bi-house text-danger"></i
                 ></a>
               </li>
@@ -161,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <a href="../index.html" class="btn btn-primary mt-4">Volver a la Galería</a>
+           <div class="text-end"><a href="../index.html" class="btn btn-outline-light mt-4 ">Volver a la Galería</a></div> 
         </div>
 
 
@@ -173,7 +174,7 @@
         <p class="text-center">©Todos los derechos reservados</p>
       </section>
     </footer>
-    <!-- Modal -->
+    
 
     <div
       class="modal fade"
