se corrige boton buscar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 id="inputBuscar"
               />
               <button class="btn btn-outline-danger" type="submit">
-                recargue Pagina
+                Refresh
               </button>
             </form>
           </div>
@@ -124,7 +124,7 @@
                 </button>
             </ul>
           </div>
-          <div class="d-block d-md-none mt-2">
+          <div class="d-block d-md-none mt-2 ">
             <form class="d-flex" role="search"id="formularioBuscar">
               <input
                 class="form-control me-2"
@@ -132,8 +132,8 @@
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
-                Buscar
+              <button class="btn btn-outline-danger" type="submit">
+                Refresh
               </button>
             </form>
           </div>
