--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,8 +46,8 @@
               />
             </div>
             <div class="mt-2 ms-3">
-              <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
-                Buscar
+              <button class="btn btn-outline-danger" type="submit">
+                Refresh
               </button>
             </div>
           </form>
@@ -130,8 +130,8 @@
               placeholder="Qué queres escuchar?"
               aria-label="Search"
             />
-            <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
-              Buscar
+            <button class="btn btn-outline-danger" type="submit">
+              Refresh
             </button>
           </form>
         </div>
