--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -52,8 +52,8 @@
               />
               </div>
               <div class="mt-2 ms-3">
-                <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
-                  Buscar
+                <button class="btn btn-outline-danger" type="submit">
+                 Refresh
                 </button>
               </div>
             </form>
@@ -142,8 +142,8 @@
                 placeholder="Qué queres escuchar?"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-danger" type="submit" id="inputBuscar">
-                Buscar
+              <button class="btn btn-outline-danger" type="submit">
+                Refresh
               </button>
             </form>
           </div>
