--- a/pages/error404.html
+++ b/pages/error404.html
@@ -122,7 +122,7 @@
           </ul>
         </div>
         <div class="d-block d-md-none mt-2">
-          <form class="d-flex" role="search">
+          <form class="d-flex" role="search" id="formularioBuscar">
             <input
               class="form-control me-2"
               type="search"
@@ -130,7 +130,7 @@
               aria-label="Search"
             />
             <button class="btn btn-outline-danger ms-10" type="submit">
-              Buscar
+              Refresh
             </button>
           </form>
         </div>
