agrego imagen error404

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
             id="cajaBotones"
             class="text-center justify-content-center mt-3 d-flex justify-content-evenly flex-md-column align-items-md-start align-items-md-center"
           >
-            <div class=""><i class="bi bi-compass nav-item fs-1"></i></div>
-            <div class=""><i class="bi bi-play-btn nav-item fs-1"></i></div>
-            <div class="">
+            <div><i class="bi bi-compass nav-item fs-1"></i></div>
+            <div><i class="bi bi-play-btn nav-item fs-1"></i></div>
+            <div>
               <i class="bi bi-file-earmark-music-fill nav-item fs-1"></i>
             </div>
           </div>
