--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -100,7 +100,7 @@
                       >Inicia Sesión</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="./pages/error404.html">Registrarse</a></li>
+                  <li><a class="dropdown-item" href="./error404.html">Registrarse</a></li>
                 </ul>
               </li>
 
@@ -114,7 +114,7 @@
                 <a
                   class="nav-link"
                   aria-current="page"
-                  href="../pages/nosotros.html"
+                  href="./nosotros.html"
                   >Nosotros</i
                 ></a>
               </li>
