--- a/pages/error404.html
+++ b/pages/error404.html
@@ -46,7 +46,7 @@
             </div>
             <div class="mt-2 ms-3">
               <button class="btn btn-outline-danger" type="submit">
-                Buscar
+                Refresh
               </button>
             </div>
           </form>
@@ -102,9 +102,9 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
-                href="./pages/nosotros.html"
+                href="./nosotros.html"
                 >Nosotros</a
               >
             </li>
@@ -136,9 +136,8 @@
         </div>
       </div>
     </nav>
-    <main>
-    
-
+    <main class="text-center">
+      <img src="../img/pagina-error-404-distorsion_52683-3853.jpg" alt="error404" class="img-fluid">
     </main>
     <footer class="bg-body-tertiary">
       <section class="container-fluid">
